fix: setup typescript configs properly

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "report-generator-npm-package",
   "version": "1.0.0",
   "description": "Generates a report based on the test cases and their results",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
-    "script": "npx tsc ./src/index.ts && node ./src/index.js",
+    "script": "npx tsc && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
